cabal-version:      3.8
name:               base64-bytestring-kadena
version:            0.1
synopsis:           Fast base64 encoding and decoding for ByteStrings
description:
  This package is a fork of 'base64-bytestring`, allowing
  for non-canonical decoding.

homepage:           https://github.com/emilypi/base64-bytestring-kadena
bug-reports:        https://github.com/emilypi/base64-bytestring-kadena/issues
license:            BSD-3-Clause
license-file:
  LICENSE.bos
  LICENSE
author:             Bryan O'Sullivan <bos@serpentine.com>,
maintainer:         Emily Pillmore <emilypi@cohomolo.gy>
copyright:          (c) 2010-2023 Bryan O'Sullivan et al., (c) 2023 Kadena LLC
category:           Data
build-type:         Simple
tested-with:
    GHC == 9.6.2

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/haskell/base64-bytestring

library
  exposed-modules:
    Data.ByteString.Base64
    Data.ByteString.Base64.Lazy
    Data.ByteString.Base64.URL
    Data.ByteString.Base64.URL.Lazy

  other-modules:    Data.ByteString.Base64.Internal
  build-depends:
      base        ^>=4.18
    , bytestring  >=0.11 && <0.13

  ghc-options:      -Wall -Wcompat
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
      base
    , base64-bytestring-kadena
    , bytestring
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2

  default-language: Haskell2010
